# cbscripts

./: .cbscript.yaml  .gitignore  README.md  publisher_mapping.json  pyproject.toml  ruff.toml
src/cbscripts/: cli.py  comic_class.py  scan_dir.py  sort_cb.py  sql_statements.py  utils.py  xml_dataclass.py
src/cbscripts/assets/: scanner_hash.json
